--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "eru123",
-            "email": "39824083+eru123@users.noreply.github.com"
+            "email": "jericho@skiddph.com"
         }
     ],
     "minimum-stability": "stable",
